BIS-1715: Fix method incompatible with JDK11